<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_marker_switch_key"
        android:summary="@string/pref_locator_sum"
        android:title="@string/pref_locator_title" />

    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="@string/pref_suggestions_start_count_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_suggestions_start_count_title" />

    <ListPreference
        android:defaultValue="ALL"
        android:entries="@array/pref_query_list_titles"
        android:entryValues="@array/pref_query_list_values"
        android:key="@string/pref_query_list_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_query_list" />

</PreferenceScreen>
